force-app/main/default/objects/ServicePayment__c/ServicePayment__c.object-meta.xml
<CustomObject>
    <description>OLD PAYMENT OBJECT, NOT USED</description>
    <label>Service Payment</label>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>Service Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>