force-app/main/default/objects/ServicePayment__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <label>Payee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>