force-app/main/default/objects/ServicePayment__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Service Payments</relationshipLabel>
    <relationshipName>Service_Payments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>